# cmpe492

./: .clang-format  .gitignore  CMakeLists.txt  README.md  report-2020-12-08-21-50.txt  report.py
conv/: CMakeLists.txt  bench.cpp  conv.hpp  conv0.cpp  conv1.cpp  conv2.cpp  conv_simd.cpp  conv_simd_mt.cpp  test.cpp
misc/: blas_test.cpp  fma_throughput.cpp
mm/: CMakeLists.txt  README.md  bench.cpp  mm.hpp  mm2.cpp  mm3.cpp  mm4.cpp  mm5.cpp  mm_base.cpp  mm_blas.cpp  mm_linit.cpp  mm_simd1.cpp  mm_simd2.cpp  mm_simd2_mt.cpp  test.cpp
reports/: report-2020-12-08-23-49.txt
util/: CMakeLists.txt  generator.hpp  simd.hpp  test_generator.cpp  timer.hpp
